--- a/style.css
+++ b/style.css
@@ -21,10 +21,19 @@ h2 {
 .Container {
     display: flex;
     }
+    .Content {
+        display: flex;
+    }
+    .name {
+        display: flex;
+        align-content: right;
+    }
 }
 .Container {
     display: flex;
-    vertical-align: middle;
+    /* vertical-align: middle; */
+    margin: 2em;
+    padding: 1em;
     }
     
 .Align {
@@ -42,12 +51,13 @@ h2 {
     margin-left: 5em;
 }
 .Place {
-    text-align: left;
-    vertical-align: middle;
-    margin: 8em;
+    /* text-align: left; */
+    /* vertical-align: middle; */
+    /* margin: 8em;
+    display: inline-block; */
 }
 .City {
- display: inline-block;
+ display: flex;
  vertical-align: middle;
 }
 .City img {
@@ -57,4 +67,19 @@ h2 {
     text-align: justify;
     display: flex;
     padding-left: 1em ;
+}
+.name {
+    display: flex;
+  
+}
+.name img {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5em;
+    /* float: left; */
+}
+.Content{
+    /* text-align: center;
+    vertical-align: middle; */
+    /* margin-bottom: 1em; */
 }
